feat: tighten up build; rely on environment variables